Sat Aug 02 02:15:02 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimAccountBox.cpp:
	  - Changing the cut-off point to 16 characters. I *will* find a
	    better solution than this. Bet on it.

Sat Aug 02 02:13:16 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBListWindow.cpp:
	  - Clicking Add Buddy when a group or a buddy is selected will now
	    default the new buddy to that group.

Sat Aug 02 02:09:05 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimAccountBox.cpp:
	* src/QGaimAccountBox.h:
	* src/QGaimDialogs.cpp:
	* src/QGaimDialogs.h:
	  - Buddies can now be added to the buddy list.

Sat Aug 02 02:07:50 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimNotify.cpp:
	  - The notification UI now does its best to enforce word wrapping
	    in the text being displayed.

Sat Aug 02 01:38:37 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimAccountBox.cpp:
	  - The account drop-down box now truncates an account name if it's
	    longer than 18 characters. I hate hard-coding this, but Qt is
	    just too messy to make me want to figure out another method that
	    works (not that I haven't tried). Suggestions are welcome.

Sat Aug 02 00:59:17 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimAccountBox.cpp:
	* src/QGaimAccountBox.h:
	* src/QGaimBListWindow.cpp:
	* src/QGaimBListWindow.h:
	* src/QGaimDialogs.cpp:
	* src/QGaimDialogs.h:
	* gaim.pro:
	  - Added an account combobox, and the initial UI of the Add Buddy
	    dialog.

Fri Aug 01 22:22:09 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimNotify.cpp:
	  - Fixed the text for the mail notification dialog.

Fri Aug 01 22:16:07 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimNotify.cpp:
	* src/QGaimNotify.h:
	* src/main.cpp:
	* gaim.pro:
	  - Added the notification UI.

Fri Aug 01 21:25:22 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvButton.cpp: